# playwright-search-tool

./: LICENSE  README.md  USAGE_EXAMPLES.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  test_basic.py  test_runner_simple.py
.github/workflows/: ci.yml
src/playwright_search/: __init__.py  cli.py  const.py  content_extractor.py  date_utils.py  engines.py  parallel_search.py  search_engine.py
src/playwright_search/core/: __init__.py  base.py  models.py
src/playwright_search/engines/: __init__.py  bing.py  duckduckgo.py  google.py
src/playwright_search/utils/: __init__.py  date_parser.py  result_processor.py  validators.py
tests/: __init__.py  conftest.py  test_helpers.py  test_parallel_search.py
tests/core/: test_models.py
tests/engines/: __init__.py  test_base_engine.py
tests/utils/: test_date_parser.py  test_result_processor.py  test_validators.py
