[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playwright-search-tool"
version = "0.4.0"
description = "A powerful web search tool using Playwright for reliable search results"
license = {text = "MIT"}
authors = [
    {name = "Assistant", email = "assistant@example.com"},
]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.25.0",
    "fake-useragent>=1.4.0",
]

[project.scripts]
psearch = "playwright_search.cli:main"

[project.urls]
Homepage = "https://github.com/example/playwright-search-tool"
Repository = "https://github.com/example/playwright-search-tool.git"

[tool.hatch.build.targets.wheel]
packages = ["src/playwright_search"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]